--- a/TeddyServer/mainwindow.ui
+++ b/TeddyServer/mainwindow.ui
@@ -56,9 +56,6 @@
       </property>
      </widget>
     </item>
-    <item row="1" column="0" colspan="5">
-     <widget class="QTextBrowser" name="chatField"/>
-    </item>
     <item row="2" column="0" colspan="5">
      <widget class="QListView" name="usersView"/>
     </item>
@@ -72,9 +69,12 @@
     <item row="3" column="2">
      <widget class="QLabel" name="cntUsers">
       <property name="text">
-       <string>TextLabel</string>
+       <string>0</string>
       </property>
      </widget>
+    </item>
+    <item row="1" column="0" colspan="5">
+     <widget class="QListWidget" name="chatField"/>
     </item>
    </layout>
   </widget>
