--- a/TeddyServer/serverwindow.ui
+++ b/TeddyServer/serverwindow.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>MainWindow</class>
- <widget class="QMainWindow" name="MainWindow">
+ <class>ServerWindow</class>
+ <widget class="QMainWindow" name="ServerWindow">
   <property name="geometry">
    <rect>
     <x>0</x>
