--- a/TeddyClient/clientwindow.ui
+++ b/TeddyClient/clientwindow.ui
@@ -6,27 +6,98 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>280</width>
+    <width>530</width>
     <height>388</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>530</width>
+    <height>388</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="0" column="0" colspan="2">
-     <widget class="QTextBrowser" name="incomingField"/>
+    <item row="0" column="0">
+     <layout class="QHBoxLayout" name="horizontalLayout_3">
+      <item>
+       <widget class="QLabel" name="label_2">
+        <property name="text">
+         <string>IP:</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="labelIP">
+        <property name="text">
+         <string>TextLabel</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </item>
-    <item row="1" column="0">
-     <widget class="QLineEdit" name="messageField"/>
+    <item row="0" column="2">
+     <layout class="QHBoxLayout" name="horizontalLayout_2">
+      <item>
+       <widget class="QLabel" name="label_3">
+        <property name="text">
+         <string>Port:</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="labelPort">
+        <property name="text">
+         <string>TextLabel</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </item>
-    <item row="1" column="1">
-     <widget class="QPushButton" name="sendButton">
-      <property name="text">
-       <string>-&gt;</string>
-      </property>
-     </widget>
+    <item row="1" column="0" colspan="3">
+     <layout class="QHBoxLayout" name="horizontalLayout_5">
+      <item>
+       <widget class="QTextBrowser" name="incomingField"/>
+      </item>
+      <item>
+       <widget class="QListWidget" name="listWidget"/>
+      </item>
+     </layout>
+    </item>
+    <item row="2" column="0" colspan="3">
+     <layout class="QHBoxLayout" name="horizontalLayout_4">
+      <item>
+       <widget class="QLineEdit" name="messageField"/>
+      </item>
+      <item>
+       <widget class="QPushButton" name="sendButton">
+        <property name="text">
+         <string>-&gt;</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </item>
+    <item row="3" column="2">
+     <layout class="QHBoxLayout" name="horizontalLayout">
+      <item>
+       <widget class="QLabel" name="label">
+        <property name="text">
+         <string>Your Status:</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="labelStatus">
+        <property name="text">
+         <string>TextLabel</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </item>
    </layout>
   </widget>
@@ -35,7 +106,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>280</width>
+     <width>530</width>
      <height>20</height>
     </rect>
    </property>
@@ -43,9 +114,17 @@
     <property name="title">
      <string>Settings</string>
     </property>
+    <widget class="QMenu" name="menuEdit_status">
+     <property name="title">
+      <string>Edit status</string>
+     </property>
+     <addaction name="actionOnline"/>
+     <addaction name="actionNotInPlace"/>
+     <addaction name="actionDoNotDisturb"/>
+    </widget>
     <addaction name="ipPortAct"/>
     <addaction name="nameAct"/>
-    <addaction name="statusAct"/>
+    <addaction name="menuEdit_status"/>
    </widget>
    <widget class="QMenu" name="menuHelp">
     <property name="title">
@@ -129,14 +208,6 @@
     <string>Edit User name</string>
    </property>
   </action>
-  <action name="statusAct">
-   <property name="text">
-    <string>Edit status...</string>
-   </property>
-   <property name="toolTip">
-    <string>Edit User status</string>
-   </property>
-  </action>
   <action name="appAct">
    <property name="text">
     <string>About app...</string>
@@ -146,6 +217,39 @@
    </property>
    <property name="shortcut">
     <string>F1</string>
+   </property>
+  </action>
+  <action name="actionOnline">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Online</string>
+   </property>
+   <property name="toolTip">
+    <string>Set online status</string>
+   </property>
+  </action>
+  <action name="actionNotInPlace">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Not in place</string>
+   </property>
+   <property name="toolTip">
+    <string>Set not in place status</string>
+   </property>
+  </action>
+  <action name="actionDoNotDisturb">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Do not disturb</string>
+   </property>
+   <property name="toolTip">
+    <string>Set do not disturb status</string>
    </property>
   </action>
  </widget>
