--- a/TeddyClient/dialogaboutclient.ui
+++ b/TeddyClient/dialogaboutclient.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>334</width>
-    <height>100</height>
+    <width>315</width>
+    <height>93</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -20,8 +20,8 @@
       <widget class="QLabel" name="label_2">
        <property name="font">
         <font>
-         <family>DejaVu Serif</family>
-         <pointsize>12</pointsize>
+         <family>Sans Serif</family>
+         <pointsize>11</pointsize>
          <weight>75</weight>
          <bold>true</bold>
         </font>
@@ -35,8 +35,8 @@
       <widget class="QLabel" name="nameLabel">
        <property name="font">
         <font>
-         <family>Monospace</family>
-         <pointsize>12</pointsize>
+         <family>Sans Serif</family>
+         <pointsize>11</pointsize>
          <weight>50</weight>
          <bold>false</bold>
         </font>
@@ -54,8 +54,8 @@
       <widget class="QLabel" name="label_3">
        <property name="font">
         <font>
-         <family>DejaVu Serif</family>
-         <pointsize>12</pointsize>
+         <family>Sans Serif</family>
+         <pointsize>11</pointsize>
          <weight>75</weight>
          <bold>true</bold>
         </font>
@@ -69,8 +69,8 @@
       <widget class="QLabel" name="statusLabel">
        <property name="font">
         <font>
-         <family>Monospace</family>
-         <pointsize>12</pointsize>
+         <family>Sans Serif</family>
+         <pointsize>11</pointsize>
          <weight>50</weight>
          <bold>false</bold>
         </font>
@@ -86,8 +86,8 @@
     <widget class="QLabel" name="label">
      <property name="font">
       <font>
-       <family>DejaVu Serif</family>
-       <pointsize>12</pointsize>
+       <family>Sans Serif</family>
+       <pointsize>11</pointsize>
        <weight>75</weight>
        <bold>true</bold>
       </font>
@@ -103,8 +103,8 @@
       <widget class="QLabel" name="dataLabel">
        <property name="font">
         <font>
-         <family>Monospace</family>
-         <pointsize>12</pointsize>
+         <family>Sans Serif</family>
+         <pointsize>11</pointsize>
          <weight>50</weight>
          <bold>false</bold>
         </font>
@@ -118,8 +118,8 @@
       <widget class="QLabel" name="labelIn">
        <property name="font">
         <font>
-         <family>Monospace</family>
-         <pointsize>12</pointsize>
+         <family>Sans Serif</family>
+         <pointsize>11</pointsize>
          <weight>50</weight>
          <bold>false</bold>
         </font>
@@ -133,8 +133,8 @@
       <widget class="QLabel" name="timeLabel">
        <property name="font">
         <font>
-         <family>Monospace</family>
-         <pointsize>12</pointsize>
+         <family>Sans Serif</family>
+         <pointsize>11</pointsize>
          <weight>50</weight>
          <bold>false</bold>
         </font>
