--- a/TeddyServer/serverwindow.ui
+++ b/TeddyServer/serverwindow.ui
@@ -87,8 +87,82 @@
      <height>20</height>
     </rect>
    </property>
+   <widget class="QMenu" name="menuSettings">
+    <property name="title">
+     <string>Settings</string>
+    </property>
+    <addaction name="actionNetwork"/>
+    <addaction name="actionKey"/>
+   </widget>
+   <widget class="QMenu" name="menuGeneral">
+    <property name="title">
+     <string>General</string>
+    </property>
+    <addaction name="actionDeploy"/>
+    <addaction name="actionStop"/>
+    <addaction name="separator"/>
+    <addaction name="actionSave_logs_to_XML"/>
+    <addaction name="separator"/>
+    <addaction name="actionExit"/>
+   </widget>
+   <addaction name="menuGeneral"/>
+   <addaction name="menuSettings"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
+  <action name="actionNetwork">
+   <property name="text">
+    <string>Network...</string>
+   </property>
+   <property name="toolTip">
+    <string>Change ip and port of server</string>
+   </property>
+  </action>
+  <action name="actionKey">
+   <property name="text">
+    <string>New TLS key</string>
+   </property>
+   <property name="toolTip">
+    <string>Reconnect all clients with new TLS key</string>
+   </property>
+  </action>
+  <action name="actionDeploy">
+   <property name="text">
+    <string>Deploy server</string>
+   </property>
+   <property name="toolTip">
+    <string>Deploy your server!</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+C</string>
+   </property>
+  </action>
+  <action name="actionStop">
+   <property name="text">
+    <string>Stop server</string>
+   </property>
+   <property name="toolTip">
+    <string>Close your server!</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+D</string>
+   </property>
+  </action>
+  <action name="actionExit">
+   <property name="text">
+    <string>Exit...</string>
+   </property>
+   <property name="toolTip">
+    <string>Exit from applicaton</string>
+   </property>
+   <property name="shortcut">
+    <string>Esc</string>
+   </property>
+  </action>
+  <action name="actionSave_logs_to_XML">
+   <property name="text">
+    <string>Save logs to XML...</string>
+   </property>
+  </action>
  </widget>
  <resources/>
  <connections/>
