--- a/TeddyServer/serverwindow.ui
+++ b/TeddyServer/serverwindow.ui
@@ -92,13 +92,13 @@
      <string>Settings</string>
     </property>
     <addaction name="actionNetwork"/>
-    <addaction name="actionKey"/>
    </widget>
    <widget class="QMenu" name="menuGeneral">
     <property name="title">
      <string>General</string>
     </property>
     <addaction name="actionDeploy"/>
+    <addaction name="actionReload"/>
     <addaction name="actionStop"/>
     <addaction name="separator"/>
     <addaction name="actionSave_logs_to_XML"/>
@@ -119,7 +119,7 @@
   </action>
   <action name="actionKey">
    <property name="text">
-    <string>New TLS key</string>
+    <string>Reload server</string>
    </property>
    <property name="toolTip">
     <string>Reconnect all clients with new TLS key</string>
@@ -161,6 +161,11 @@
   <action name="actionSave_logs_to_XML">
    <property name="text">
     <string>Save logs to XML...</string>
+   </property>
+  </action>
+  <action name="actionReload">
+   <property name="text">
+    <string>Reload server</string>
    </property>
   </action>
  </widget>
