Filesystem in progress...

--- a/TeddyClient/clientwindow.ui
+++ b/TeddyClient/clientwindow.ui
@@ -123,19 +123,6 @@
     </item>
     <item row="3" column="0">
      <layout class="QGridLayout" name="gridLayout_3">
-      <item row="0" column="1">
-       <spacer name="horizontalSpacer">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>88</width>
-          <height>17</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
       <item row="0" column="0">
        <widget class="QPushButton" name="profileButton">
         <property name="text">
@@ -143,17 +130,50 @@
         </property>
        </widget>
       </item>
-      <item row="0" column="3">
-       <widget class="QLabel" name="labelStatus">
-        <property name="text">
-         <string>TextLabel</string>
+      <item row="0" column="1">
+       <spacer name="horizontalSpacer">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>78</width>
+          <height>17</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item row="0" column="2">
+       <widget class="QProgressBar" name="loadProgress">
+        <property name="value">
+         <number>24</number>
         </property>
        </widget>
       </item>
-      <item row="0" column="2">
+      <item row="0" column="3">
+       <spacer name="horizontalSpacer_3">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item row="0" column="4">
        <widget class="QLabel" name="label">
         <property name="text">
          <string>Your Status:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="5">
+       <widget class="QLabel" name="labelStatus">
+        <property name="text">
+         <string>TextLabel</string>
         </property>
        </widget>
       </item>
